maze.lessons.maze.island.IslandMaze.scala.error
Escaper:11: error: not found: value poseBrosse
  poseBrosse()
  ^